# chatbot-sotater

./: .gitignore  README.md  app.py  pyproject.toml
agent/: graph.py  nodes.py  state.py  tools.py
projects/: manager.py
rag/: chunking.py  embeddings.py  vectorstore.py
scraper/: extract.py
tests/: test_chunking.py  test_extract.py  test_manager.py
ui/: chat.py  documents.py  sidebar.py
